add google logo link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
     <div id="nav-input-bar">
         <div id="top-left-nav">
-            <img id="google-logo" src="/images/google-logo.png" alt="google-logo">
+            <a id="google-logo-link" href="http://google.com">
+                <img id="google-logo" src="/images/google-logo.png" alt="google-logo"></a>
             <div id="search-bar-container">
                 <input type="text" name="search-input" id="search-input">
                 <img class="search-bar-icons" id="microphone-icon"
