add search result template for ads with functioning css

--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>build this webpage - Google Search</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <link rel="shortcut icon" href="https://www.google.com/s2/favicons?domain=google.com" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/ba3bb875a0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-    <div id="nav-input-bar">
-        <div id="top-left-nav">
+    <div id="main-input-container">
+        <div id="left-input-container">
             <a id="google-logo-link" href="http://google.com">
                 <img id="google-logo" src="/images/google-logo.png" alt="google-logo"></a>
             <div id="search-bar-container">
@@ -24,19 +23,63 @@
                 <img class="search-bar-icons" id="search-icon" src="/images/search.png" alt="search-icon">
             </div>
         </div>
-        <div id="top-right-nav">
+        <div id="right-input-container">
             <img id="apps-icon" src="/images/apps-icon.png" alt="apps-icon">
             <button id="sign-in-button">Sign in</button>
         </div>
     </div>
-    <div id="nav-links">
-        <a href="" class="left-nav-links"></a>
-        <a href="" class="left-nav-links"></a>
-        <a href="" class="left-nav-links"></a>
-        <a href="" class="left-nav-links"></a>
-        <a href="" class="left-nav-links"></a>
-        <a href="" class="left-nav-links"></a>
+    <div id="main-nav-container">
+        <nav id="nav-link-container">
+            <a href="" id="All-search-nav" class="nav-links"><img class="nav-icons" src="/images/colorful-search.png"
+                    alt="search-icon"></img>All</a>
+            <a href="" class="nav-links"><img class="nav-icons" src="/images/maps-icon.png" alt="maps-icon">Maps</a>
+            <a href="" class="nav-links"><img class="nav-icons" src="/images/videos-icon.png"
+                    alt="videos-icon">Videos</a>
+            <a href="" class="nav-links"><img class="nav-icons" src="/images/news-icon.png" alt="news-icon">News</a>
+            <a href="" class="nav-links"><img class="nav-icons" src="/images/gallery-icon.png"
+                    alt="gallery-icon">Images</a>
+            <a href="" class="nav-links"><img class="nav-icons" src="/images/more-icon.png" alt="more-icon">More</a>
+        </nav>
+        <div id="settings-tools">
+            <a href="" class="nav-links">Settings</a>
+            <a href="" class="nav-links">Tools</a>
+        </div>
     </div>
+    <hr>
+    <p id="results-info">About 117,000,000 results (0.46 seconds)
+    </p>
+    <div class="base-search-result-container">
+        <div class="result-link-container">
+            <a href="" class="link-address"><span id="ad-font-dot">Ad · </span>www.wix.com/<span><img id="down-icon"
+                        src="/images/down-icon.png" alt="down-icon"></span>
+                <h3 class="result-header">Ecommerce Website Builder | Start a 90 Day Free Trial Now.‎</h3>
+
+            </a>
+            <p class="result-description">
+                Everything You Need To Start Selling Online Today. Unlimited 24/7 Support. Social Media Integration.
+                Secure
+                Shopping Cart. Fraud Prevention. Fully Hosted. Fulfillment Integration. Full Blogging Platform. SSL
+                Certificate. 99.99% Average Uptime. Drop Shipping Integration.
+            </p>
+            <div id="plans-products">
+                <div id="plans-products-left">
+                    <a href="">
+                        <h3 class="result-header">See Plans & Pricing</h3>
+                    </a>
+                    <p class="result-description">See Our Best Rates & Hottest Plans.
+                        Try Shopify® at $0 Cost for 90 Days</p>
+                </div>
+                <div id="plans-products-right">
+                    <a href="">
+                        <h3 class="result-header">Find Products To Sell</h3>
+                    </a>
+                    <p class="result-description">Start a Dropshipping Business
+                        with only a Few Clicks!
+                    </p>
+                </div>
+            </div>
+        </div>
+
 
 
 
