created second result link with list nav

--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
     <hr>
     <p id="results-info">About 117,000,000 results (0.46 seconds)
     </p>
+
+
     <div class="base-search-result-container">
         <div class="result-link-container">
-            <a href="" class="link-address"><span id="ad-font-dot">Ad · </span>www.wix.com/<span><img id="down-icon"
+            <a href="" class="link-address"><span id="ad-font-dot">Ad · </span>www.shopify.com/<span><img id="down-icon"
                         src="/images/down-icon.png" alt="down-icon"></span>
                 <h3 class="result-header">Ecommerce Website Builder | Start a 90 Day Free Trial Now.‎</h3>
 
@@ -79,7 +81,32 @@
                 </div>
             </div>
         </div>
+    </div>
 
+    <div class="base-search-result-container">
+        <div class="result-link-container">
+            <a href="" class="link-address"><span id="ad-font-dot">Ad · </span>www.wix.com/<span><img id="down-icon"
+                        src="/images/down-icon.png" alt="down-icon"></span>
+                <h3 class="result-header">Create Your Website for Free | It's Easy & Free with Wix‎
+                    ‎</h3>
+
+            </a>
+            <p class="result-description">
+                Stand out online with a your own stunning <strong>website</strong>. Get started today. Mobile optimized.
+                Easy drag n’
+                drop. Advanced image editor. Easy-to-add blog. 100s of templates. 1000s of free images. Market leaders.
+                100s of Apps. SEO wizard. Multiple payment methods.
+            </p>
+
+            <ul class="result-nav-links-container">
+                <li><a href="" class="result-nav-links">Online Store Builder · </a></li>
+                <li><a href="" class="result-nav-links">Free Hosting · </a></li>
+                <li><a href="" class="result-nav-links">Customize Easily · </a></li>
+                <li><a href="" class="result-nav-links">Free Website Builder</a></li>
+            </ul>
+
+        </div>
+    </div>
 
 
 
