before conversion of icons from png to svg

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>build this webpage - Google Search</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="/styles/style.css">
-    <link rel="shortcut icon" href="https://www.google.com/s2/favicons?domain=google.com" type="image/x-icon">
+    <link rel="shortcut icon" href="https://www.google.com/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -107,12 +107,43 @@
             </ul>
 
         </div>
+
+        <div class="result-link-container">
+            <a href="" class="link-address"><span id="ad-font-dot">Ad ·
+                </span>http://www.thebest10websitebuilders.com/Best/Website-Maker<span><img id="down-icon"
+                        src="/images/down-icon.png" alt="down-icon"></span>
+                <h3 class="result-header">10 Best Website Makers 2020 | The #1 Website Maker Ranking‎
+                    ‎</h3>
+
+            </a>
+            <p class="result-description">
+                Compare The Best Website Makers Out There. Website Building was Never so Easy! Easy-to-add Blog. Traffic
+                Generation Tools. No Coding Needed. Free Hosting Included. Built-in SEO. Mobile Optimized. 1000s of Free
+                Images. 100s of Templates.
+            </p>
+
+        </div>
+        <div id="featured-snippet">
+            <p id="snippet-description">TO CREATE A <strong>WEBSITE</strong> WITH WORDPRESS (OR JOOMLA & DRUPAL), USE
+                ONE CLICK
+                INSTALLATION: Log in to your hosting account. Go to your control panel. Look for the
+                “WordPress” or <strong>“Website”
+                </strong>
+                icon. Choose the domain where you want to install your website.</p>
+            <a href="" class="link-address"><img class="result-icons"
+                    src="https://www.google.com/s2/favicons?domain=github.io%22"
+                    alt="github.io-icon">victor-lf.github.io ›
+                google-search-results<span><img id="down-icon" src="/images/down-icon.png" alt="down-icon"></span>
+                <h3 class="result-header">build this webpage - GitHub Pages</h3>
+        </div>
+        <div id="featured-snippet-info">
+            <a href="" class="snippet-links"><img src="/images/question-icon.png" alt="question-icon">About featured
+                snippets</a>
+            <a href="" class="snippet-links"><img src="/images/feedback-icon.png" alt="feedback-icon">Feedback</a>
+        </div>
+
+
     </div>
-
-
-
-
-
 
 
 </body>
