Replaced png for svg and corrected positions

--- a/index.html
+++ b/index.html
@@ -20,31 +20,42 @@
                 <input type="text" name="search-input" id="search-input">
                 <img class="search-bar-icons" id="microphone-icon"
                     src="http://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png" alt="googlemic">
-                <img class="search-bar-icons" id="search-icon" src="/images/search.png" alt="search-icon">
+                <img class="search-bar-icons" id="search-icon" src="/images/search.svg" alt="search-icon">
             </div>
         </div>
         <div id="right-input-container">
-            <img id="apps-icon" src="/images/apps-icon.png" alt="apps-icon">
+            <img id="apps-icon" src="/images/apps.svg" alt="apps-icon">
             <button id="sign-in-button">Sign in</button>
         </div>
     </div>
 
     <div id="main-nav-container">
-        <nav id="nav-link-container">
-            <a href="" id="All-search-nav" class="nav-links"><img class="nav-icons" src="/images/colorful-search.png"
-                    alt="search-icon"></img>All</a>
-            <a href="" class="nav-links"><img class="nav-icons" src="/images/maps-icon.png" alt="maps-icon">Maps</a>
-            <a href="" class="nav-links"><img class="nav-icons" src="/images/videos-icon.png"
-                    alt="videos-icon">Videos</a>
-            <a href="" class="nav-links"><img class="nav-icons" src="/images/news-icon.png" alt="news-icon">News</a>
-            <a href="" class="nav-links"><img class="nav-icons" src="/images/gallery-icon.png"
-                    alt="gallery-icon">Images</a>
-            <a href="" class="nav-links"><img class="nav-icons" src="/images/more-icon.png" alt="more-icon">More</a>
-        </nav>
+        <div id="nav-link-container">
+            <div class="link-container" id="all-nav">
+                <img class="nav-icons" src="/images/colorful-search.svg" alt="search-icon">All
+            </div>
+            <div class="link-container">
+                <img class="nav-icons" src="/images//maps.svg" alt="maps-icon">Maps
+            </div>
+            <div class="link-container">
+                <img class="nav-icons" src="/images/videos.svg" alt="videos-icon">Videos
+            </div>
+            <div class="link-container">
+                <img class="nav-icons" src="/images/news.svg" alt="news-icon">News
+            </div>
+            <div class="link-container">
+                <img class="nav-icons" src="/images/images.svg" alt="gallery-icon">Images</a>
+            </div>
+            <div class="link-container">
+                <img class="nav-icons" src="/images/more.svg" alt="more-icon">More
+            </div>
+        </div>
+
         <div id="settings-tools">
             <a href="" class="nav-links">Settings</a>
             <a href="" class="nav-links">Tools</a>
         </div>
+
     </div>
     <hr>
     <p id="results-info">About 117,000,000 results (0.46 seconds)
