--- a/index.html
+++ b/index.html
@@ -140,20 +140,37 @@
                 INSTALLATION: Log in to your hosting account. Go to your control panel. Look for the
                 “WordPress” or <strong>“Website”
                 </strong>
-                icon. Choose the domain where you want to install your website.</p>
+                icon. Choose the domain where you want to install your <strong>website</strong>.</p>
             <a href="" class="link-address"><img class="result-icons"
                     src="https://www.google.com/s2/favicons?domain=github.io%22"
                     alt="github.io-icon">victor-lf.github.io ›
                 google-search-results<span><img id="down-icon" src="/images/down-icon.png" alt="down-icon"></span>
                 <h3 class="result-header">build this webpage - GitHub Pages</h3>
         </div>
-        <div id="featured-snippet-info">
-            <a href="" class="snippet-links"><img src="/images/question-icon.png" alt="question-icon">About featured
-                snippets</a>
-            <a href="" class="snippet-links"><img src="/images/feedback-icon.png" alt="feedback-icon">Feedback</a>
+        <div id="featured-snippet-about">
+            <a href="" class="snippet-links"><img class="snippet-icons" src="/images/question.svg"
+                    alt="question-icon">About Featured
+                Snippets</a>
+            <a href="" class="snippet-links"><img id="feedback-icon" class="snippet-icons" src="/images/feedback.svg"
+                    alt="feedback-icon">Feedback</a>
         </div>
 
+        <div class="result-link-container">
+            <a href="" class="link-address"><img class="result-icons"
+                    src="https://www.google.com/s2/favicons?domain=github.io%22"
+                    alt="github.io-icon">christine-27.github.io › google-homepage<span><img id="down-icon"
+                        src="/images/down-icon.png" alt="down-icon"></span>
+                <h3 class="result-header">build this webpage - GitHub Pages
+                    ‎</h3>
 
+            </a>
+            <p class="result-description">
+                TO CREATE A WEBSITE WITH WORDPRESS (OR JOOMLA & DRUPAL), USE ONE CLICK INSTALLATION: 1. Log in to your
+                hosting account. 2. Go to your ...
+            </p>
+
+        </div>
+        <!-- Base Container -->
     </div>
 
 
