add left margin for better alignment

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                 TO CREATE A WEBSITE WITH WORDPRESS (OR JOOMLA & DRUPAL), USE ONE CLICK INSTALLATION: 1. Log in to your
                 hosting account. 2. Go to your ...
             </p>
+            <h3 id="videos-header">Videos</h3>
 
         </div>
         <!-- Base Container -->
