completed videos section

--- a/index.html
+++ b/index.html
@@ -168,8 +168,39 @@
                 TO CREATE A WEBSITE WITH WORDPRESS (OR JOOMLA & DRUPAL), USE ONE CLICK INSTALLATION: 1. Log in to your
                 hosting account. 2. Go to your ...
             </p>
-            <h3 id="videos-header">Videos</h3>
+            <h3 id="videos-intro">Videos</h3>
 
+            <div id="videos-container">
+                <div class="card-container">
+                    <a href="https://www.youtube.com/watch?v=YWA-xbsJrVg" class="video-link">
+                        <img class="video-images" src="/images/website-learners.png" alt="website-learners-img">
+                        <h3 class="video-headings">How to Make a Website in 10 mins - Simple & Easy</h3>
+                    </a>
+                    <p class="video-channel-name">Website Learners</p>
+                    <p class="youtube-date">Youtube <span> - Jan 3, 2018</span></p>
+                </div>
+
+                <div class="card-container">
+                    <a href="https://www.youtube.com/watch?v=Fyg4RKkn8Hw" class="video-link">
+                        <img class="video-images" src="/images/create-wp-site.png" alt="create-wp-site-img">
+                        <h3 class="video-headings">How To Build A Website From Scratch [IN 20 MINS]</h3>
+                    </a>
+
+                    <p class="video-channel-name">Create WP Site</p>
+                    <p class="youtube-date">Youtube <span> - Apr 1, 2016</span></p>
+                </div>
+
+                <div class="card-container"><a href="https://www.youtube.com/watch?v=l3mUE6qj2Qg" class="video-link">
+                        <img class="video-images" src="/images/roberto-blake.png" alt="roberto-blake-img">
+                        <h3 class="video-headings">How To Build a Website Without Code | Everyone Can Build a ...</h3>
+                    </a>
+                    <p class="video-channel-name">Roberto Blake</p>
+                    <p class="youtube-date">Youtube <span> - Nov 8, 2016</span></p>
+                </div>
+                <!-- Videos Container -->
+            </div>
+
+            <!-- Result link Container -->
         </div>
         <!-- Base Container -->
     </div>
