added right arrow for videos

--- a/index.html
+++ b/index.html
@@ -198,11 +198,19 @@
                 <p class="video-channel-name">Roberto Blake</p>
                 <p class="youtube-date">Youtube <span> - Nov 8, 2016</span></p>
             </div>
+            <img id="right-arrow" src="/images/right-arrow.svg" alt="right-arrow">
             <!-- Videos Container -->
         </div>
 
-        <!-- Result link Container -->
-        <!-- </div> -->
+        <div id="people-ask-container">
+            <h3 id="people-ask-heading">Peaple also ask</h3>
+            <div class="peoplse-ask-row">
+                <p class="people-ask-question"></p>
+                <!-- <img src="/images/" alt=""> -->
+            </div>
+
+
+        </div>
         <!-- Base Container -->
     </div>
 
