completed people-ask table

--- a/index.html
+++ b/index.html
@@ -203,10 +203,30 @@
         </div>
 
         <div id="people-ask-container">
-            <h3 id="people-ask-heading">Peaple also ask</h3>
-            <div class="peoplse-ask-row">
-                <p class="people-ask-question"></p>
-                <!-- <img src="/images/" alt=""> -->
+            <h3 id="people-ask-heading">People also ask</h3>
+            <div class="people-ask-row">
+                <p class="people-ask-question">How can I cready my own webpage?</p>
+                <img id="down-expand-icon" src="/images/down-expand.svg" alt="down-arrow">
+            </div>
+            <div class="people-ask-row">
+                <p class="people-ask-question">How much does it cost to build a website?</p>
+                <img id="down-expand-icon" src="/images/down-expand.svg" alt="down-arrow">
+            </div>
+            <div class="people-ask-row">
+                <p class="people-ask-question">How do I build an interactive website?</p>
+                <img id="down-expand-icon" src="/images/down-expand.svg" alt="down-arrow">
+            </div>
+            <div class="people-ask-row">
+                <p class="people-ask-question">How do you create a website for free?</p>
+                <img id="down-expand-icon" src="/images/down-expand.svg" alt="down-arrow">
+            </div>
+            <div class="people-ask-row">
+                <p class="people-ask-question">How does webpage work?</p>
+                <img id="down-expand-icon" src="/images/down-expand.svg" alt="down-arrow">
+            </div>
+            <div class="people-ask-row">
+                <p class="people-ask-question">Is GoDaddy Free?</p>
+                <img id="down-expand-icon" src="/images/down-expand.svg" alt="down-arrow">
             </div>
 
 
