add multiple search results

--- a/index.html
+++ b/index.html
@@ -231,6 +231,75 @@
 
 
         </div>
+
+        <div class="result-link-container">
+            <a href="" class="link-address"><img class="result-icons"
+                    src="https://www.google.com/s2/favicons?domain=arstechnica.com" alt="github.io-icon">arstechnica.com
+                › information-technology › 2013/07 › with-zero-cod...<span><img id="down-icon"
+                        src="/images/down-icon.png" alt="down-icon"></span>
+                <h3 class="result-header">With zero coding experience, artist building 180 webpages in ...
+                    ‎</h3>
+
+            </a>
+            <p class="result-description">
+                <span class="result-date">Jul 26, 2013</span> - One of Jennifer Dewalt's creations, this
+                <strong>webpage</strong> lets
+                visitors create paintings in ... <strong>Build</strong> a different <strong>website</strong> every day
+                for 180
+                consecutive days.
+            </p>
+        </div>
+
+        <div class="result-link-container">
+            <a href="" class="link-address"><img class="result-icons"
+                    src="https://www.google.com/s2/favicons?domain=websitebuilderexpert.com"
+                    alt="github.io-icon">www.websitebuilderexpert.com › building-websites<span><img id="down-icon"
+                        src="/images/down-icon.png" alt="down-icon"></span>
+                <h3 class="result-header"> How to Build a Website: the Step-by-Step Guide to Easy Setup
+                    ‎</h3>
+
+            </a>
+            <p class="result-description">
+                <span class="result-date">6 days ago</span> - Not sure how to <strong>build</strong> a
+                <strong>website</strong>? It actually is not that
+                hard. You don't have to be technical at all. With our handy guide, you can get started ...
+            </p>
+        </div>
+
+        <div class="result-link-container">
+            <a href="" class="link-address"><img class="result-icons"
+                    src="https://www.google.com/s2/favicons?domain=websitesetup.org"
+                    alt="github.io-icon">websitesetup.org<span><img id="down-icon" src="/images/down-icon.png"
+                        alt="down-icon"></span>
+                <h3 class="result-header">How to Create a Website: Step-by-Step Guide for Beginners ...
+                    ‎</h3>
+
+            </a>
+            <p class="result-description">
+                Learn how to make a website and set it up. This site contains different
+                tutorials on how to build a website using WordPress, Joomla, Drupal & HTML.
+            </p>
+            <ul class="result-nav-links-container">
+                <li><a href="" class="result-nav-links">‎Website Builders · </a></li>
+                <li><a href="" class="result-nav-links"> ‎WordPress vs. Joomla vs. Drupal · </a></li>
+                <li><a href="" class="result-nav-links">Best WordPress themes</a></li>
+            </ul>
+        </div>
+
+        <div class="result-link-container">
+            <a href="" class="link-address"><img class="result-icons"
+                    src="https://www.google.com/s2/favicons?domain=buildthis.io" alt="github.io-icon">www.buildthis.io ›
+                make-a-website<span><img id="down-icon" src="/images/down-icon.png" alt="down-icon"></span>
+                <h3 class="result-header"> How to Build A Website: A-to-Z Beginner Guide - BuildThis.io
+                    ‎</h3>
+
+            </a>
+            <p class="result-description">
+                <span class="result-date">Mar 10, 2020 </span> - In this article, I will show you the essential steps in
+                creating a website. Register a domain name; Signup for a web hosting; Design your webpage ...
+            </p>
+        </div>
+
         <!-- Base Container -->
     </div>
 
