add extra-info for how to build website

--- a/index.html
+++ b/index.html
@@ -298,6 +298,26 @@
                 <span class="result-date">Mar 10, 2020 </span> - In this article, I will show you the essential steps in
                 creating a website. Register a domain name; Signup for a web hosting; Design your webpage ...
             </p>
+
+            <div id="extra-info-container">
+                <div class="extra-info-rows">
+                    <p class="extra-info-questions">Can you make your own website free?</p>
+                    <img id="down-expand-icon" src="/images/down-expand.svg" alt="down-arrow">
+                </div>
+                <div class="extra-info-rows">
+                    <p class="extra-info-questions">How do I create a website for my business?</p>
+                    <img id="down-expand-icon" src="/images/down-expand.svg" alt="down-arrow">
+                </div>
+                <div class="extra-info-rows">
+                    <p class="extra-info-questions">What is the best website builder?</p>
+                    <img id="down-expand-icon" src="/images/down-expand.svg" alt="down-arrow">
+                </div>
+            </div>
+            <div id="show-more-container">
+                <img id="down-expand-icon" src="/images/down-expand.svg" alt="down-arrow">
+                <p>Show more</p>
+
+            </div>
         </div>
 
         <!-- Base Container -->
