base search results completed

--- a/index.html
+++ b/index.html
@@ -320,6 +320,52 @@
             </div>
         </div>
 
+
+        <div class="result-link-container">
+            <a href="" class="link-address"><img class="result-icons"
+                    src="https://www.google.com/s2/favicons?domain=squarespace.com"
+                    alt="github.io-icon">www.squarespace.com<span><img id="down-icon" src="/images/down-icon.png"
+                        alt="down-icon"></span>
+                <h3 class="result-header">
+                    Squarespace: Build a Website – Website Builder
+                    ‎</h3>
+            </a>
+            <p class="result-description">
+                Squarespace is the all-in-one solution for anyone looking to create a beautiful
+                <strong>website</strong>. Domains, eCommerce, hosting, galleries, analytics, and 24/7 support all ...
+            </p>
+        </div>
+
+        <div class="result-link-container">
+            <a href="" class="link-address"><img class="result-icons" src="https://www.website.com/favicon.ico"
+                    alt="github.io-icon">www.website.com<span><img id="down-icon" src="/images/down-icon.png"
+                        alt="down-icon"></span>
+                <h3 class="result-header">
+                    Create Your Website for Free | Free Site Builder | Website.com
+                    ‎</h3>
+            </a>
+            <p class="result-description">
+                Domain names, web hosting, <strong>website</strong> templates, and ecommerce solutions ...
+                <strong>Build</strong> a credible brand
+                identity with your custom domain name - included for free ...
+            </p>
+        </div>
+
+        <div class="result-link-container">
+            <a href="" class="link-address"><img class="result-icons"
+                    src="https://www.google.com/s2/favicons?domain=makeawebsitehub.com"
+                    alt="github.io-icon">makeawebsitehub.com<span><img id="down-icon" src="/images/down-icon.png"
+                        alt="down-icon"></span>
+                <h3 class="result-header"> How to Make a Website in 2020 - Free Easy Guide to Building ...
+                    ‎</h3>
+
+            </a>
+            <p class="result-description">
+                <span class="result-date">Jan 1, 2020</span> - This site teaches you how to make a website in just 3
+                easy
+                to follow steps. There's also lots of really useful resources to help you build traffic in ...
+            </p>
+        </div>
         <!-- Base Container -->
     </div>
 
