add related-search container with images

--- a/index.html
+++ b/index.html
@@ -366,6 +366,53 @@
                 to follow steps. There's also lots of really useful resources to help you build traffic in ...
             </p>
         </div>
+
+
+        <div class="related-search">
+            <p class="related-text">Related search</p>
+            <div class="header-view-more">
+                <h3 class="related-header">Web Design program</h3>
+                <a href="" class="view-more">View 3+ more</a>
+            </div>
+            <div class="related-card-container">
+                <div class="related-card"><a href=""> <img src="/images/related_search/first-container/mobirise"
+                            alt="mobirise-logo">
+                        <h4 class="related-image-name">Mobirise</h4>
+                    </a>
+                </div>
+                <div class="related-card"><a href=""> <img src="/images/related_search/first-container/google_web"
+                            alt="google-web-logo">
+                        <h4 class="related-image-name">Google Web Designer</h4>
+                    </a>
+                </div>
+                <div class="related-card"><a href=""> <img src="/images/related_search/first-container/adobe_dream"
+                            alt="adobe-dream-logo">
+                        <h4 class="related-image-name">Adobe Dreamwe...</h4>
+                    </a>
+                </div>
+                <div class="related-card"><a href=""><img src="/images/related_search/first-container/open_ele"
+                            alt="open-ele-logo">
+                        <h4 class="related-image-name">openEle...</h4>
+                    </a>
+                </div>
+                <div class="related-card"><a href=""><img src="/images/related_search/first-container/bootstrap_studio"
+                            alt="boostrap-studio-logo">
+                        <h4 class="related-image-name">Bootstrap Studio</h4>
+                    </a>
+                </div>
+                <div class="related-card">
+                    <a href=""><img src="/images/related_search/first-container/rapid" alt="rapid-logo">
+                        <h4 class="related-image-name">RapidWe...</h4>
+                    </a>
+                </div>
+                <div class="related-card"><a href=""><img
+                            src="/images/related_search/first-container/microsoft_expression"
+                            alt="microsoft-expression-logo">
+                        <h4 class="related-image-name">Microsoft Expression Web</h4>
+                    </a>
+                </div>
+            </div>
+        </div>
         <!-- Base Container -->
     </div>
 
