add searches-related-links and updated image names

--- a/index.html
+++ b/index.html
@@ -413,6 +413,71 @@
                 </div>
             </div>
         </div>
+
+        <div class="related-search" id="last-related-search">
+            <p class="related-text">Related search</p>
+            <div class="header-view-more">
+                <h3 class="related-header">Free website builders</h3>
+                <a href="" class="view-more">View 3+ more</a>
+            </div>
+            <div class="related-card-container">
+                <div class="related-card"><a href=""> <img src="/images/related_search/second-container/wordpress"
+                            alt="wordpress-logo">
+                        <h4 class="related-image-name">WordPress</h4>
+                    </a>
+                </div>
+                <div class="related-card"><a href=""> <img src="/images/related_search/second-container/godaddy"
+                            alt="godaddy-logo">
+                        <h4 class="related-image-name">GoDaddy</h4>
+                    </a>
+                </div>
+                <div class="related-card"><a href=""> <img src="/images/related_search/second-container/weebly"
+                            alt="weebly-logo">
+                        <h4 class="related-image-name">Weebly</h4>
+                    </a>
+                </div>
+                <div class="related-card"><a href=""><img src="/images/related_search/second-container/jimdo"
+                            alt="jimdo-logo">
+                        <h4 class="related-image-name">Jimdo</h4>
+                    </a>
+                </div>
+                <div class="related-card"><a href=""><img src="/images/related_search/second-container/webnode"
+                            alt="webnode-logo">
+                        <h4 class="related-image-name">Webnode</h4>
+                    </a>
+                </div>
+                <div class="related-card">
+                    <a href=""><img src="/images/related_search/second-container/webs" alt="webs-logo">
+                        <h4 class="related-image-name">Webs</h4>
+                    </a>
+                </div>
+                <div class="related-card"><a href=""><img src="/images/related_search/second-container/im_creator"
+                            alt="im-creator-logo">
+                        <h4 class="related-image-name">IM creator</h4>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <a href="" id="related-search-feedback">Feedback</a>
+
+        <h3 id="related-pages-header" class="result-header">Searches related to build this webpage</h3>
+
+        <div id="related-phrase-container">
+            <div id="related-phrase-left">
+                <a href="" class="related-phrase"><strong>best way to create a website</strong> </a>
+                <a href="" class="related-phrase"><strong>ways to</strong> build a website</a>
+                <a href="" class="related-phrase">build a <strong>custom website</strong></a>
+                <a href="" class="related-phrase"><strong>how to</strong> build<strong> a good website</strong></a>
+            </div>
+            <div id="related-phrase-right">
+                <a href="" class="related-phrase"><strong>how to</strong> build <strong>a website for a
+                        client</strong></a>
+                <a href="" class="related-phrase"><strong>how to</strong> build <strong>an interactive website from
+                        scratch</strong></a>
+                <a href="" class="related-phrase"><strong>creating a website for your business</strong></a>
+                <a href="" class="related-phrase"><strong>how to create a website pdf</strong></a>
+            </div>
+        </div>
         <!-- Base Container -->
     </div>
 
