added google search letters

--- a/index.html
+++ b/index.html
@@ -478,6 +478,76 @@
                 <a href="" class="related-phrase"><strong>how to create a website pdf</strong></a>
             </div>
         </div>
+        <div id="google-letters">
+            <table>
+                <tr id="letters">
+                    <td><span class="google-letters"
+                            style="background:url(../images/nav_logo299.webp) no-repeat;background-position:-24px 0;width:28px"></span>
+
+                    </td>
+                    <td> <a href="" id="first-link"><span class="google-letters"
+                                style="background:url(../images/nav_logo299.webp) no-repeat;background-position:-52px 0;width:20px"></span>1</a>
+                    </td>
+                    <td>
+                        <a href=""><span class="google-letters"
+                                style="background:url(../images/nav_logo299.webp) no-repeat;background-position:-73px 0;width:20px"></span>2</a>
+                    </td>
+                    <td>
+                        <a href=""><span class="google-letters"
+                                style="background:url(../images/nav_logo299.webp) no-repeat;background-position:-73px 0;width:20px"></span>3</a>
+                    </td>
+                    <td>
+                        <a href=""><span class="google-letters"
+                                style="background:url(../images/nav_logo299.webp) no-repeat;background-position:-73px 0;width:20px"></span>4</a>
+                    </td>
+                    <td>
+                        <a href=""><span class="google-letters"
+                                style="background:url(../images/nav_logo299.webp) no-repeat;background-position:-73px 0;width:20px"></span>5</a>
+                    </td>
+                    <td>
+                        <a href=""><span class="google-letters"
+                                style="background:url(../images/nav_logo299.webp) no-repeat;background-position:-73px 0;width:20px"></span>6</a>
+                    </td>
+                    <td>
+                        <a href=""><span class="google-letters"
+                                style="background:url(../images/nav_logo299.webp) no-repeat;background-position:-73px 0;width:20px"></span>7</a>
+                    </td>
+                    <td>
+                        <a href=""><span class="google-letters"
+                                style="background:url(../images/nav_logo299.webp) no-repeat;background-position:-73px 0;width:20px"></span>8</a>
+                    </td>
+                    <td>
+                        <a href=""><span class="google-letters"
+                                style="background:url(../images/nav_logo299.webp) no-repeat;background-position:-73px 0;width:20px"></span>9</a>
+                    </td>
+                    <td>
+                        <a href=""><span class="google-letters"
+                                style="background:url(../images/nav_logo299.webp) no-repeat;background-position:-73px 0;width:20px"></span>10</a>
+                    </td>
+                    <td>
+                        <a href=""><span class="google-letters"
+                                style="background:url(../images/nav_logo299.webp) no-repeat;background-position:-96px 0;width:20px"></span></a>
+                    </td>
+                    <td>
+                        <a href=""><span class="google-letters"
+                                style="background:url(../images/nav_logo299.webp) no-repeat;background-position:-115px 0;width:7px"></span></a>
+                    </td>
+                    <td>
+                        <a href=""><span class="google-letters"
+                                style="background:url(../images/nav_logo299.webp) no-repeat;background-position:-121px 0;width:20px"></span></a>
+                    </td>
+                    <td id="next-symbol">
+                        <a href=""><span class="google-letters"
+                                style="background:url(../images/nav_logo299.webp) no-repeat;background-position:-160px 0;width:10px"></span><span
+                                style="
+                                margin-left: -20px;
+                            ">Next</span></a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+
         <!-- Base Container -->
     </div>
 
