added hover to elements

--- a/index.html
+++ b/index.html
@@ -547,9 +547,33 @@
             </table>
         </div>
 
-
         <!-- Base Container -->
     </div>
+
+    <div id="location-footer">
+        <div id="country">
+            <span>Turkey</span>
+        </div>
+        <div style="border-left: 1px solid rgba(172, 172, 172, 0.473);height:26px;"></div>
+        <div id="address"><span id="circle"></span>
+            <span style="font-size: 16px;"><b>Somewhere, Istanbul </b></span> <span style="color:rgb(124, 124, 124)">-
+                From
+                your
+                Internet address -
+                <a href="" class="address-links">Use precise
+                    location</a>
+                -
+                <a href="" class="address-links">Learn more</a></span>
+        </div>
+    </div>
+    <footer>
+        <div id="footer-container">
+            <a href="" class="footer-links">Help</a>
+            <a href="" class="footer-links">Send feedback</a>
+            <a href="" class="footer-links">Privacy</a>
+            <a href="" class="footer-links">Terms</a>
+        </div>
+    </footer>
 
 
 </body>
