add hover to Tools option

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div id="settings-tools">
             <a href="" class="nav-links">Settings</a>
-            <a href="" class="nav-links">Tools</a>
+            <a href="" class="nav-links"><span id="tools" style="padding:10px;">Tools</span></a>
         </div>
 
     </div>
